--- a/src/app/signin/signin-form/signin-form.component.html
+++ b/src/app/signin/signin-form/signin-form.component.html
@@ -26,13 +26,13 @@
         </label>
 
       </div>
-      <div class="forgot-pass"><a href="#">Quên mật khẩu?</a></div>
+      <div class="forgot-pass"><a href="recovery-password">Quên mật khẩu?</a></div>
     </div>
     <div class="signin-btn-groups">
       <button class="btn btn-primary btn-rounded" type="button" id="button-accept-signin" mdbRipple rippleColor="danger">
         Đăng nhập
       </button>
     </div>
-    <div class="bottom-line-signin-form">Chưa có tài khoản? <a href="">Đăng kí.</a></div>
+    <div class="bottom-line-signin-form">Chưa có tài khoản? <a href="register">Đăng kí.</a></div>
   </div>
 </div>
