add homepage and create project file structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1 class="text-center text-primary">Hello world</h1>
+<app-navbar></app-navbar>
+<a id="scrollToTop"><i class="fas fa-angle-double-up"></i></a>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
