test sign in with jwt

--- a/src/app/register/register-form/register-form.component.html
+++ b/src/app/register/register-form/register-form.component.html
@@ -61,6 +61,6 @@
         </button>
       </div>
     </form>
-    <div class="bottom-line-register-form">Đã có tài khoản? <a href="register">Đăng nhập.</a></div>
+    <div class="bottom-line-register-form">Đã có tài khoản? <a href="signin">Đăng nhập.</a></div>
   </div>
 </div>
