--- a/src/app/signin/change-pass/change-pass.component.css
+++ b/src/app/signin/change-pass/change-pass.component.css
@@ -22,6 +22,12 @@
 .change-pass-form .input-group .form-control {
   border-left: 0px;
 }
+.change-pass-form .password-alert {
+  text-align: center;
+  border-radius: 0%;
+  background: #fed6dd;
+  color: white;
+}
 .change-pass-form .change-pass-btn-groups {
   width: 100%;
   display: flex;
