--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8">
@@ -247,3 +247,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
