--- a/src/app/post/search-result/search-result.component.html
+++ b/src/app/post/search-result/search-result.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="search-result container mt-5">
     <h1 class="text-center text-break">Kết quả tìm kiếm với từ khóa {{keyword}}</h1>
     <app-search></app-search>
@@ -129,7 +130,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 </div>
+<app-footer></app-footer>
