--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,27 +13,27 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand fw-bold" routerLink="/home" title="Home"><span id="custom-brand">WORLDNOW</span></a>
-        <form class="d-flex" style="width: 60%;">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        </form>
-      <div class="justify-content-end" *ngIf="!currentUser.username ">
-        <ul class="navbar-nav me-auto my-2 my-lg-0" style="--bs-scroll-height: 100px;">
-          <li class="nav-item">
-            <a class="nav-link active" href="/signin"><button class="btn btn-rounded btn-subscribe">Đăng nhập</button></a>
-          </li>
-        </ul>
-      </div>
-      <div class="justify-content-end" *ngIf="currentUser.username">
-        <ul class="navbar-nav me-auto my-2 my-lg-0" style="--bs-scroll-height: 100px;">
-          <li class="nav-item">
-            <a class="nav-link active" href="/profile"><button class="btn btn-rounded btn-subscribe">Profile</button></a>
-          </li>
-        </ul>
-      </div>
-
-
         <div class="justify-content-end">
-            <a class="mr-20" (click)="openSearchBox()"><i class="fas fa-search text-muted"></i></a>
+            <div class="row">
+                <div class="col">
+                    <div class="dropdown">
+                        <i class="fas fa-user-alt text-muted"></i>
+                        <div class="dropdown-content">
+                            <a class="nav-link" *ngIf="!currentUser.username" href="/signin"><button
+                                    class="btn btn-rounded btn__login">Đăng
+                                    nhập</button></a>
+                            <div *ngIf="currentUser.username">
+                                <p class="border-bottom w-100"><b>Xin chào {{currentUser.username}}</b></p>
+                                <a class="nav-link" href="/profile">Thông tin tài khoản</a>
+                                <a class="nav-link pe-auto" (click)="signOut()">Đăng xuất</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mt-2">
+                    <a class="mr-20" (click)="openSearchBox()"><i class="fas fa-search text-muted"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </nav>
