--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -7,11 +7,12 @@
 .news-topic:hover {
   opacity: 0.5;
 }
-.btn-subscribe {
+.btn__login {
   background-color: #567b95;
   color: white;
   font-size: smaller;
   padding: 4px 10px;
+  margin-left: 20px;
   transition: ease 0.1s;
 }
 .custom-nav {
@@ -94,4 +95,27 @@
 .main__navbar {
   position: sticky;
   top: 0;
+  z-index: 1;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-top: 7px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 23px;
+  background-color: #f9f9f9;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 10px 15px;
+  z-index: 10;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
