--- a/src/app/auth/signin/change-pass/change-pass.component.html
+++ b/src/app/auth/signin/change-pass/change-pass.component.html
@@ -1,4 +1,5 @@
-<div class="container d-flex justify-content-center">
+<app-navbar></app-navbar>
+<div class="container d-flex justify-content-center mt-5">
   <div class="change-pass-form justify-content-center ">
     <div class="change-pass-title"><h1>Thay đổi mật khẩu</h1></div>
     <form [formGroup]="changePassForm" (ngSubmit)="changePassword()">
@@ -40,3 +41,4 @@
     </form>
   </div>
 </div>
+<app-footer></app-footer>
