--- a/src/app/auth/signin/recover-pass-form/recover-pass-form.component.html
+++ b/src/app/auth/signin/recover-pass-form/recover-pass-form.component.html
@@ -1,4 +1,5 @@
-<div class="container d-flex justify-content-center">
+<app-navbar></app-navbar>
+<div class="container d-flex justify-content-center mt-5">
   <div class="recover-pass-form justify-content-center ">
     <div class="recover-pass-title"><h1>Quên mật khẩu</h1></div>
     <div class="recovery-guide"><p>Vui lòng nhập email hoặc tài khoản để lấy lại mật khẩu</p></div>
@@ -16,3 +17,4 @@
     <div class="bottom-line-recover-pass-form"><a href="signin">Trở về trang đăng nhập.</a></div>
   </div>
 </div>
+<app-footer></app-footer>
