--- a/src/app/auth/signin/signin-form/signin-form.component.html
+++ b/src/app/auth/signin/signin-form/signin-form.component.html
@@ -1,4 +1,5 @@
-<div class="container d-flex justify-content-center">
+<app-navbar></app-navbar>
+<div class="container d-flex justify-content-center mt-5">
   <div class="signin-form justify-content-center ">
     <div class="signin-title"><h1>Đăng nhập</h1></div>
     <form [formGroup]="siginForm" (ngSubmit)="sigin()">
@@ -40,3 +41,4 @@
     <div class="bottom-line-signin-form">Chưa có tài khoản? <a href="register">Đăng kí.</a></div>
   </div>
 </div>
+<app-footer></app-footer>
