--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,9 +23,11 @@
                                     class="btn btn-rounded btn__login">Đăng
                                     nhập</button></a>
                             <div *ngIf="currentUser.username">
-                                <p class="border-bottom w-100"><b>Xin chào {{currentUser.username}}</b></p>
-                                <a class="nav-link" href="/profile">Thông tin tài khoản</a>
-                                <a class="nav-link pe-auto" (click)="signOut()">Đăng xuất</a>
+                                <p class="border-bottom w-100 cursor-df"><b>Xin chào {{currentUser.username}}</b></p>
+                                <a class="nav-link text-dark hover-half__opacity" href="/profile">Thông tin tài
+                                    khoản</a>
+                                <a class="nav-link cursor-pointer text-dark hover-half__opacity"
+                                    (click)="signOut()">Đăng xuất</a>
                             </div>
                         </div>
                     </div>
@@ -50,29 +52,32 @@
                         <a class="nav-link news-topic text-dark" aria-current="page" routerLink="/home"><i
                                 class="fas fa-home fs-4"></i></a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Tin nóng</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Tin nóng</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Cuộc sống số</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Cuộc sống số</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Viễn thông</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Viễn thông</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Sản phẩm số</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Sản phẩm số</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Game</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Game</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Khởi nghiệp</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Khởi nghiệp</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Multimedia</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Multimedia</a>
                     </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link news-topic text-dark" aria-current="page" href="#">Khám phá</a>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Khám phá</a>
+                    </li>
+                    <li class="nav-item news-topic fw-bold">
+                        <a class="nav-link  text-dark" aria-current="page" href="#">Bảo mật</a>
                     </li>
                 </ul>
             </div>
