--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,3 +1,9 @@
+.cursor-df {
+  cursor: default !important;
+}
+.cursor-pointer {
+  cursor: pointer !important;
+}
 #custom-brand:hover {
   opacity: 0.5;
 }
@@ -19,6 +25,12 @@
   margin: -8px 100px;
 }
 
+.nav-item {
+  transition: all 0.3s linear !important;
+  &:hover {
+    opacity: 0.6;
+  }
+}
 .mr-20 {
   margin-right: 20px !important;
 }
@@ -37,11 +49,10 @@
   width: 100%;
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   left: 0;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0);
 }
 
 .overlay-content {
@@ -105,7 +116,8 @@
 }
 
 .dropdown-content {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   right: 0;
   top: 23px;
@@ -114,8 +126,17 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 10px 15px;
   z-index: 10;
+  transition: all 0.3s ease-in-out;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  visibility: visible;
+  opacity: 1;
+}
+
+.hover-half__opacity {
+  transition: all ease-in-out 0.3s;
+  &:hover {
+    opacity: 0.5;
+  }
 }
