--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,3 +1,11 @@
+.cursor-df {
+  cursor: default !important;
+}
+
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
 #custom-brand:hover {
   opacity: 0.5;
 }
@@ -10,16 +18,24 @@
   opacity: 0.5;
 }
 
-.btn-subscribe {
+.btn__login {
   background-color: #567b95;
   color: white;
   font-size: smaller;
   padding: 4px 10px;
+  margin-left: 20px;
   transition: ease 0.1s;
 }
 
 .custom-nav {
   margin: -8px 100px;
+}
+
+.nav-item {
+  transition: all 0.3s linear !important;
+}
+.nav-item:hover {
+  opacity: 0.6;
 }
 
 .mr-20 {
@@ -40,11 +56,10 @@
   width: 100%;
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   left: 0;
   background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .overlay-content {
@@ -98,6 +113,39 @@
 .main__navbar {
   position: sticky;
   top: 0;
+  z-index: 1;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-top: 7px;
+}
+
+.dropdown-content {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 23px;
+  background-color: #f9f9f9;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 10px 15px;
+  z-index: 10;
+  transition: all 0.3s ease-in-out;
+}
+
+.dropdown:hover .dropdown-content {
+  visibility: visible;
+  opacity: 1;
+}
+
+.hover-half__opacity {
+  transition: all ease-in-out 0.3s;
+}
+.hover-half__opacity:hover {
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=navbar.component.css.map */
