--- a/src/app/auth/signin/recover-pass-form/recover-pass-form.component.css
+++ b/src/app/auth/signin/recover-pass-form/recover-pass-form.component.css
@@ -29,6 +29,15 @@
 .recover-pass-form .input-group .form-control {
   border-left: 0px;
 }
+.recover-pass-form .alert {
+  text-align: center;
+  border-radius: 0%;
+  background: #fed6dd;
+  color: white;
+  height: 30px;
+  margin: 5px;
+  padding: 5px;
+}
 .recover-pass-form .recover-pass-btn-groups {
   width: 100%;
   display: flex;
