--- a/src/app/auth/register/register-form/register-form.component.css
+++ b/src/app/auth/register/register-form/register-form.component.css
@@ -27,11 +27,14 @@
 .register-form .input-group .form-control {
   border-left: 0px;
 }
-.register-form .password-alert {
+.register-form .alert {
   text-align: center;
   border-radius: 0%;
   background: #fed6dd;
   color: white;
+  height: 30px;
+  margin: 5px;
+  padding: 5px;
 }
 .register-form .register-btn-groups {
   width: 100%;
