--- a/src/app/auth/register/register-form/register-form.component.scss
+++ b/src/app/auth/register/register-form/register-form.component.scss
@@ -36,11 +36,14 @@
     }
   }
 
-  .password-alert {
+  .alert {
     text-align: center;
     border-radius: 0%;
     background: #fed6dd;
     color: white;
+    height: 30px;
+    margin: 5px;
+    padding: 5px;
   }
 
   .register-btn-groups {
