--- a/src/app/auth/signin/change-pass/change-pass.component.html
+++ b/src/app/auth/signin/change-pass/change-pass.component.html
@@ -4,7 +4,7 @@
     <div class="change-pass-title"><h1>Thay đổi mật khẩu</h1></div>
     <form [formGroup]="changePassForm" (ngSubmit)="changePassword()">
       <div *ngIf="submitted && isWrongPass" >Sai mật khẩu cũ</div>
-      <div class="input-group flex-nowrap ">
+      <div v *ngIf="this.emailParam==null" class="input-group flex-nowrap ">
         <span class="input-group-text" id="addon-wrapping1"><i class="fa-solid fa-lock"></i></span>
         <input formControlName="oldPass" type="password" class="form-control" placeholder="Nhập mật khẩu cũ"
                aria-label="old-password"
