--- a/src/app/auth/signin/recover-pass-form/recover-pass-form.component.html
+++ b/src/app/auth/signin/recover-pass-form/recover-pass-form.component.html
@@ -3,17 +3,25 @@
   <div class="recover-pass-form justify-content-center ">
     <div class="recover-pass-title"><h1>Quên mật khẩu</h1></div>
     <div class="recovery-guide"><p>Vui lòng nhập email hoặc tài khoản để lấy lại mật khẩu</p></div>
-    <div class="input-group flex-nowrap ">
-      <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
-      <input type="text" class="form-control" placeholder="Nhập email/Tài khoản" aria-label="Username"
-             aria-describedby="addon-wrapping"/>
-    </div>
+    <form [formGroup]="recoverForm" (ngSubmit)="recover()">
+      <div class="alert" role="alert" *ngIf="recoverForm.get('recovery_email')!.hasError('email') &&
+    recoverForm.get('recovery_email')!.touched">
+        this is not an email
+      </div>
+      <div class="input-group flex-nowrap ">
+        <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
+        <input type="text" class="form-control" placeholder="Nhập email/Tài khoản" aria-label="Username"
+               aria-describedby="addon-wrapping"
+               formControlName="recovery_email"/>
+      </div>
 
-    <div class="recover-pass-btn-groups">
-      <button class="btn btn-primary btn-rounded" type="button" id="button-accept-recover-pass" mdbRipple rippleColor="danger">
-        Lấy lại mật khẩu
-      </button>
-    </div>
+      <div class="recover-pass-btn-groups">
+        <button class="btn btn-primary btn-rounded" type="submit" id="button-accept-recover-pass" mdbRipple
+                rippleColor="danger">
+          Lấy lại mật khẩu
+        </button>
+      </div>
+    </form>
     <div class="bottom-line-recover-pass-form"><a href="signin">Trở về trang đăng nhập.</a></div>
   </div>
 </div>
