--- a/src/app/auth/signin/signin-form/signin-form.component.scss
+++ b/src/app/auth/signin/signin-form/signin-form.component.scss
@@ -41,7 +41,15 @@
       border-left: 0px;
     }
   }
-
+  .alert {
+    text-align: center;
+    border-radius: 0%;
+    background: #fed6dd;
+    color: white;
+    height: 30px;
+    margin: 5px;
+    padding: 5px;
+  }
   .signin-btn-groups {
     width: 100%;
     display: flex;
