--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,36 +4,35 @@
         <div class="col-md-8">
             <div class="row">
                 <div class="row">
-                    <img src="../../../assets/images/hot-image.jpg" alt="Stephen Maturen/Getty Images" class="w-100">
+                    <img [src]="posts_list[0]?.enclosure?.link" alt="'../../../assets/images/skeleton-loading.gif'"
+                        class="w-100">
                 </div>
                 <div class="row">
-                    <div class="col d-flex flex-row-reverse fw-light fs-11">IMAGE SOURCE
+                    <div class="col d-flex flex-row-reverse fw-light fs-11">Theo Vietnamnet
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <p class="fs-11">Lorem</p>
+                        <p class="fs-11">{{posts_list[0]?.categories}}</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <a href="" class="hot-title">
-                            <h6 id="hot-post">Lorem ipsum dolor sit, amet consectetur adipisicing elit</h6>
+                        <a href="{{posts_list[0]?.link}}" class="hot-title" target="_blank">
+                            <h6 id="hot-post">{{posts_list[0]?.title}}</h6>
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <p class="text-center hot-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit</p>
+                        <p class="text-center hot-content">{{posts_list[0]?.description}}</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <p class="fw-light fs-11">33m ago
+                        <p class="fw-light fs-11">{{get_duration(posts_list[0]?.pubDate||"")}}
                             <span class="p-1"></span>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit
+                            Nguồn : Vietnamnet
                         </p>
                     </div>
                 </div>
@@ -41,108 +40,36 @@
         </div>
 
         <div class="col-md-4 line-part">
-            <h6>HOT NEWS</h6>
+            <h6>TIN NÓNG</h6>
             <div class="p-1"></div>
 
-            <div class="row">
+            <div class="row" *ngFor="let item of get_politics_list_with_amount(1,4);">
                 <div class="col-md-6">
-                    <a href="#" class="news-title">
-                        <h6 class="fs-20 news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</h6>
+                    <a href="{{item.link}}" class="news-title" target="_blank">
+                        <h6 class="fs-20 news-title">{{item.title}}</h6>
                     </a>
                 </div>
-                <div class="col-md-4"><img class="post__image" src="../../../assets/images/hot-img.jpg" alt></div>
+                <div class="col-md-4"><img class="post__image" src="{{item.enclosure.link}}" alt></div>
                 <div class="col-md-9">
-                    <p class="news-content">Lorem ipsum dolor sit, amet consectetur adipisicing elitLorem ipsum dolor
-                        sit, amet consectetur adipisicing elit
+                    <p class="news-content">{{item.description}}
                     </p>
-                    <p class="fw-light fs-11 credit">7h ago
+                    <p class="fw-light fs-11 credit">{{get_duration(item.pubDate||"")}}
                         <span class="p-1">-</span>
-                        By Lorem ipsum dolor sit, amet consectetur adipisicing elit
-                    </p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <a href="#" class="news-title">
-                        <h6 class="fs-20 news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</h6>
-                    </a>
-                </div>
-                <div class="col-md-4"><img class="post__image" src="../../../assets/images/hot-img.jpg" alt></div>
-                <div class="col-md-9">
-                    <p class="news-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit
-                    </p>
-                    <p class="fw-light fs-11 credit">7h ago
-                        <span class="p-1">-</span>
-                        By Lorem ipsum dolor sit, amet consectetur adipisicing elit
-                    </p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <a href="#" class="news-title">
-                        <h6 class="fs-20 news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit
-                        </h6>
-                    </a>
-                </div>
-                <div class="col-md-4"><img class="post__image" src="../../../assets/images/hot-img.jpg" alt></div>
-                <div class="col-md-9">
-                    <p class="news-content">Lorem ipsum dolor sit, amet consectetur adipisicing elitLorem ipsum dolor
-                        sit, amet consectetur adipisicing elit
-                    </p>
-                    <p class="fw-light fs-11">7h ago
-                        <span class="p-1">-</span>
-                        By Lorem ipsum dolor sit, amet consectetur adipisicing elit
+                        Nguồn : Vietnamnet
                     </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="row sub__posts mt-5 lazy d-flex justify-content-between lazy">
-        <div class="col-md-2 p-3">
+        <div class="col-md-2 p-3" *ngFor="let item of get_politics_list_with_amount(4,9)">
             <div class="row">
                 <img mdbLazyLoading [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                    [attr.data-src]="'../../../assets/images/sub-img.jpg'" alt="404" class="img-fluid my-3" />
+                    [attr.data-src]="item.enclosure.link" alt="'../../../assets/images/skeleton-loading.gif'"
+                    class="img-fluid my-3" />
             </div>
-            <div class=" row">
-                <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</a>
-            </div>
-        </div>
-        <div class="col-md-2 p-3">
             <div class="row">
-                <img mdbLazyLoading [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                    [attr.data-src]="'../../../assets/images/sub-img.jpg'" alt="404" class="img-fluid my-3" />
-            </div>
-            <div class=" row">
-                <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</a>
-            </div>
-        </div>
-        <div class="col-md-2 p-3">
-            <div class="row">
-                <img mdbLazyLoading [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                    [attr.data-src]="'../../../assets/images/sub-img.jpg'" alt="404" class="img-fluid my-3" />
-            </div>
-            <div class=" row">
-                <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</a>
-            </div>
-        </div>
-        <div class="col-md-2 p-3">
-            <div class="row">
-                <img mdbLazyLoading [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                    [attr.data-src]="'../../../assets/images/sub-img.jpg'" alt="404" class="img-fluid my-3" />
-            </div>
-            <div class=" row">
-                <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</a>
-            </div>
-        </div>
-        <div class="col-md-2 p-3">
-            <div class="row">
-                <img mdbLazyLoading [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                    [attr.data-src]="'../../../assets/images/sub-img.jpg'" alt="404" class="img-fluid my-3" />
-            </div>
-            <div class=" row">
-                <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit</a>
+                <a href="{{item.link}}" class="text-break news-title" target="_blank">{{item.title}}</a>
             </div>
         </div>
     </div>
@@ -152,62 +79,46 @@
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/hot-img.jpg'" alt>
+                        [attr.data-src]="posts_list[posts_list.length-1]?.enclosure?.link"
+                        alt="'../../../assets/images/skeleton-loading.gif'">
                 </div>
                 <div class="col">
-                    <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit</a>
+                    <a href="{{posts_list[posts_list.length-1]?.link}}" class="text-break news-title"
+                        target="_blank">{{posts_list[posts_list.length-1]?.title}}</a>
                 </div>
             </div>
-            <div class="row pt-4">
+            <div class="row pt-4" *ngFor="let item of get_sports_list_with_amount(0,2)">
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/hot-img.jpg'" alt>
+                        [attr.data-src]="item.enclosure.link" alt="'../../../assets/images/skeleton-loading.gif'">
                 </div>
                 <div class="col">
-                    <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit</a>
-                </div>
-            </div>
-            <div class="row pt-4">
-                <div class="col">
-                    <img class="w-100" mdbLazyLoading
-                        [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/hot-img.jpg'" alt>
-                </div>
-                <div class="col">
-                    <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit</a>
+                    <a href="{{item.link}}" class="text-break news-title" target="_blank">{{item.title}}</a>
                 </div>
             </div>
         </div>
         <div class="col-md-6 middle__column">
             <div class="row border-bottom">
-                <h3><a href="" class="text-body">News category here</a></h3>
+                <h3><a href="" class="text-body">Thể thao</a></h3>
             </div>
             <div class="row p-4">
                 <div class="col-md-3">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/new-img.jpg'" alt="404" />
+                        [attr.data-src]="sports_news_list[2]?.enclosure?.link"
+                        alt="'../../../assets/images/skeleton-loading.gif'" />
                 </div>
                 <div class="col-md-9">
-                    <a href="" class="news-title">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit.Lorem ipsum</a>
+                    <a href="{{sports_news_list[2]?.link}}" class="news-title"
+                        target="_blank">{{sports_news_list[2]?.title}}</a>
                 </div>
             </div>
+            <!-- 5 -->
             <div class="row p-4 pt-0">
-                <a href="" class="news-title mt-3">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                <a href="" class="news-title mt-3">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                <a href="" class="news-title mt-3">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                <a href="" class="news-title mt-3">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                <a href="" class="news-title mt-3">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
+                <a href="{{item.link}}" class="news-title mt-3"
+                    *ngFor="let item of get_sports_list_with_amount(3,sports_news_list.length-1)"
+                    target="_blank">{{item.title}}</a>
             </div>
         </div>
         <div class="col-md-3 last__column border-start">
@@ -215,33 +126,22 @@
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/hot-img.jpg'" alt>
+                        [attr.data-src]="sports_news_list[sports_news_list.length-1]?.enclosure?.link"
+                        alt="'../../../assets/images/skeleton-loading.gif'">
                 </div>
                 <div class="col">
-                    <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit</a>
+                    <a href="{{sports_news_list[sports_news_list.length-1]?.link}}"
+                        class="text-break news-title">{{sports_news_list[sports_news_list.length-1]?.title}}</a>
                 </div>
             </div>
-            <div class="row pt-4">
+            <div class="row pt-4" *ngFor="let item of get_tech_list_with_amount(0,2)">
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/hot-img.jpg'" alt>
+                        [attr.data-src]="item.enclosure.link" alt="'../../../assets/images/skeleton-loading.gif'">
                 </div>
                 <div class="col">
-                    <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit</a>
-                </div>
-            </div>
-            <div class="row pt-4">
-                <div class="col">
-                    <img class="w-100" mdbLazyLoading
-                        [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="'../../../assets/images/hot-img.jpg'" alt>
-                </div>
-                <div class="col">
-                    <a href="" class="text-break news-title">Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit</a>
+                    <a href="{{item.link}}" class="text-break news-title">{{item.title}}</a>
                 </div>
             </div>
         </div>
