#5 - implemented when click article title redirect to article list page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,9 @@
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <p class="fs-11">{{posts_list[0]?.categories}}</p>
+                        <a href="chinh-tri">
+                            <p class="fs-11 text-muted">{{posts_list[0]?.categories}}</p>
+                        </a>
                     </div>
                 </div>
                 <div class="row">
