--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -56,7 +56,7 @@
                         <a class="nav-link  text-dark" aria-current="page" href="vietnamnet">Tin nóng</a>
                     </li>
                     <li class="nav-item news-topic fw-bold" *ngFor="let item of feeds_list">
-                        <a class="nav-link  text-dark" aria-current="page" href="{{item?.slug}}">{{item.title}}</a>
+                        <a class="nav-link  text-dark" aria-current="page" href="chu-de/{{item?.slug}}">{{item.title}}</a>
                     </li>
                 </ul>
             </div>
